envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: hcm
                codec_type: AUTO

                # 1) Route all traffic to "ws_service"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: ws_service

                # 2) Our HTTP filters, including ext_authz
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: http://127.0.0.1:9001
                          cluster: authz_service
                          timeout: 2s
                        path_prefix: "/"
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: "upgrade"
                              - exact: "connection"
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: "x-some-header"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                # 3) Enable WebSocket upgrades
                upgrade_configs:
                  - upgrade_type: websocket

  clusters:
    - name: ws_service
      type: STATIC
      connect_timeout: 1s
      load_assignment:
        cluster_name: ws_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9002

    - name: authz_service
      type: STATIC
      connect_timeout: 1s
      load_assignment:
        cluster_name: authz_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9001

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
